--- a/style/main.css
+++ b/style/main.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
 }
 body{
-    background: var(--preta);
+    background:var(--preta);
     font-family: 'Times New Roman', Times, serif;
     color:white;
 }
@@ -43,8 +43,37 @@ header nav a:hover{
     color: #fff;
 
 }
+
 .filme-principal{
+    
     font-size: 16px;
-    background: url("/img/capa.jpg");
     height: 400px;
+    background-size: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+}
+.filme-principal .descricao{
+    margin-bottom: 40px;
+}
+.titulo{
+    font-size: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-top: 20%;
+}
+.botao{
+    background-color: rgba(0,0,0, 0.5);
+    border: none;
+    color:white;
+    padding: 15px;
+    margin-right: 15px;
+    font-size: 12px;
+    cursor: pointer;
+    transition: .3s ease-in;
+}
+.botao:hover{
+    background-color: white;
+    color:black;
 }
