--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,8 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    width: 1350px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     background:var(--preta);
@@ -47,7 +49,7 @@ header nav a:hover{
 .filme-principal{
     
     font-size: 16px;
-    height: 400px;
+    height: 600px;
     background-size: 100%;
     display: flex;
     flex-direction: column;
@@ -72,8 +74,20 @@ header nav a:hover{
     font-size: 12px;
     cursor: pointer;
     transition: .3s ease-in;
+    width: 170px;
 }
 .botao:hover{
     background-color: white;
     color:black;
+}
+.series {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    overflow: scroll;
+
+}
+.subtitle{
+ font-weight: bold;
+ font-size: 20px;
 }
