--- a/style/main.css
+++ b/style/main.css
@@ -7,7 +7,7 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    width: 1350px;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
@@ -64,6 +64,7 @@ header nav a:hover{
     font-size: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-top: 20%;
+    padding: 10px;
 }
 .botao{
     background-color: rgba(0,0,0, 0.5);
